--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/leaflet": "^1.9.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "mongose": "^0.0.2-security",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-medium-image-zoom": "^5.2.14",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.28"
