--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "mongose": "^0.0.2-security",
-    "next": "15.3.2",
+    "next": "^15.3.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
