--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ out/
 
 # macOS junk
 .DS_Store
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
